Working on fixing heading layout issues

--- a/week-09-hw/css/style.css
+++ b/week-09-hw/css/style.css
@@ -7,10 +7,6 @@
   align-items: center;
   border-style: solid;
   border-color: #a2a2a2;
-  width: 80%;
-  height: 30%;
-  min-width: 200px;
-  min-height: 50px;
   padding: 2em;
   display: inline-block;
 }
